# FactTracer

./: .gitignore  PRD.md  README.md  docker-compose.yml  start-facttracer.command
docs/: README.md  (+5 more)
facttracer-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  facttracer.db.bak-20260609145712  pyproject.toml
facttracer-backend/.github/workflows/: backend-ci.yml
facttracer-backend/app/: __init__.py  main.py  models.py  schemas.py  serializers.py  utils.py
facttracer-backend/app/api/: dependencies.py
facttracer-backend/app/api/routes/: admin.py  auth.py  health.py  issues.py  podcasts.py  users.py
facttracer-backend/app/collectors/: base.py  media.py  news_search.py  official_sources.py  rss.py  social.py  youtube.py
facttracer-backend/app/core/: config.py  rate_limit.py  security.py
facttracer-backend/app/db/: schema.py  session.py
facttracer-backend/app/db/migrations/: env.py
facttracer-backend/app/services/: jobs.py  topics.py
facttracer-backend/app/services/admin/: issue_operations.py  recheck.py  settings.py  source_policy.py
facttracer-backend/app/workers/: issue_jobs.py  podcast_jobs.py
facttracer-backend/docs/: BACKEND_INCOMPLETE_FEATURES.md
facttracer-backend/scripts/: audit_api_spec.py  audit_podcast_operations.py  backfill_issue_taxonomy.py  repair_db_quality.py  run_podcast_operational_smoke.py  run_rq_worker.py  run_scheduler.py  run_search_collection.py  run_worker.py  seed_podcast_episodes.py  verify_podcast_remaining_work.py
facttracer-backend/tests/: test_api.py
(+182 files in other folders)
