[project]
name = "facttracer-backend"
version = "0.1.0"
description = "Python backend for FactTracer public, account, admin, embedding, and AI processing APIs."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.17.0",
  "bcrypt>=4.3.0",
  "email-validator>=2.3.0",
  "fastapi>=0.124.0",
  "openai>=2.13.0",
  "pillow>=12.0.0",
  "psycopg[binary]>=3.3.2",
  "pydantic-settings>=2.12.0",
  "pypdf>=6.4.0",
  "pyjwt>=2.10.1",
  "pytesseract>=0.3.13",
  "redis>=7.0.1",
  "rq>=2.6.1",
  "sqlalchemy>=2.0.45",
  "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
